--- a/css/css_boxes.css
+++ b/css/css_boxes.css
@@ -36,7 +36,8 @@ Bottom code is possible solution.
 /* Give projects entry 'a' tags/links a class for box-shadow */
 .box-shadow {
   border-radius: 6px;
-  box-shadow: 5px 5px 25px 0px rgba(46, 61, 73, 0.2);
+  box-shadow: 5px 5px 25px 3px rgba(46, 61, 73, 0.2);
+  transition: all 200ms ease-in-out;
   /*position: absolute;*/
   width: 100%;
   height: 100%;
@@ -51,8 +52,15 @@ Bottom code is possible solution.
   flex-wrap: wrap;
   flex-direction: column;
   justify-content: space-arounds;
+  border: solid 1px lightblue;
+  background-color: rgba(96, 125, 139, 0.04);
 
 }
+
+.box-shadow:hover {
+  box-shadow: 5px 5px 25px -8px rgba(46, 61, 73, 0.2);
+}
+
 
 .project-image-height {
 
